libp2p_files=files(
    # rtc_p2p
    'base/asyncstuntcpsocket.cc',
    'base/asyncstuntcpsocket.h',
    'base/basicpacketsocketfactory.cc',
    'base/basicpacketsocketfactory.h',
    'base/candidatepairinterface.h',
    'base/dtlstransport.cc',
    'base/dtlstransport.h',
    'base/dtlstransportinternal.cc',
    'base/dtlstransportinternal.h',
    'base/icetransportinternal.cc',
    'base/icetransportinternal.h',
    'base/p2pconstants.cc',
    'base/p2pconstants.h',
    'base/p2ptransportchannel.cc',
    'base/p2ptransportchannel.h',
    'base/packetlossestimator.cc',
    'base/packetlossestimator.h',
    'base/packetsocketfactory.cc',
    'base/packetsocketfactory.h',
    'base/packettransportinterface.h',
    'base/packettransportinternal.cc',
    'base/packettransportinternal.h',
    'base/port.cc',
    'base/port.h',
    'base/portallocator.cc',
    'base/portallocator.h',
    'base/portinterface.cc',
    'base/portinterface.h',
    'base/pseudotcp.cc',
    'base/pseudotcp.h',
    'base/relayport.cc',
    'base/relayport.h',
    'base/stun.cc',
    'base/stun.h',
    'base/stunport.cc',
    'base/stunport.h',
    'base/stunrequest.cc',
    'base/stunrequest.h',
    'base/tcpport.cc',
    'base/tcpport.h',
    'base/transport.h',
    'base/transportdescription.cc',
    'base/transportdescription.h',
    'base/transportdescriptionfactory.cc',
    'base/transportdescriptionfactory.h',
    'base/transportfactoryinterface.h',
    'base/transportinfo.h',
    'base/turnport.cc',
    'base/turnport.h',
    'base/udpport.h',
    'base/udptransport.cc',
    'base/udptransport.h',
    'client/basicportallocator.cc',
    'client/basicportallocator.h',
    'client/relayportfactoryinterface.h',
    'client/turnportfactory.cc',
    'client/turnportfactory.h',
    'base/relayserver.cc',
    'base/relayserver.h',
    'base/stunserver.cc',
    'base/stunserver.h',
    'base/turnserver.cc',
    'base/turnserver.h',
)


libp2p = static_library(
  'p2p',
  libp2p_files,
  include_directories : inc_common,
  cpp_args: internal_args,
)

all_libraries += libp2p
