libpc_files = files(
    'audiotrack.cc',
    'audiotrack.h',
    'datachannel.cc',
    'datachannel.h',
    'dtmfsender.cc',
    'dtmfsender.h',
    'iceserverparsing.cc',
    'iceserverparsing.h',
    'jsepicecandidate.cc',
    'jsepsessiondescription.cc',
    'localaudiosource.cc',
    'localaudiosource.h',
    'mediastream.cc',
    'mediastream.h',
    'mediastreamobserver.cc',
    'mediastreamobserver.h',
    'mediastreamtrack.h',
    'peerconnection.cc',
    'peerconnection.h',
    'peerconnectionfactory.cc',
    'peerconnectionfactory.h',
    'peerconnectioninternal.h',
    'remoteaudiosource.cc',
    'remoteaudiosource.h',
    'rtcstatscollector.cc',
    'rtcstatscollector.h',
    'rtcstatstraversal.cc',
    'rtcstatstraversal.h',
    'rtpreceiver.cc',
    'rtpreceiver.h',
    'rtpsender.cc',
    'rtpsender.h',
    'rtptransceiver.cc',
    'rtptransceiver.h',
    'sctputils.cc',
    'sctputils.h',
    'sdputils.cc',
    'sdputils.h',
    'statscollector.cc',
    'statscollector.h',
    'streamcollection.h',
    'trackmediainfomap.cc',
    'trackmediainfomap.h',
    'videocapturertracksource.cc',
    'videocapturertracksource.h',
    'videotrack.cc',
    'videotrack.h',
    'videotracksource.cc',
    'videotracksource.h',
    'webrtcsdp.cc',
    'webrtcsdp.h',
    'webrtcsessiondescriptionfactory.cc',
    'webrtcsessiondescriptionfactory.h',
    
    # rtc_pc_base
    'audiomonitor.h',
    'bundlefilter.cc',
    'bundlefilter.h',
    'channel.cc',
    'channel.h',
    'channelmanager.cc',
    'channelmanager.h',
    'currentspeakermonitor.cc',
    'currentspeakermonitor.h',
    'dtlssrtptransport.cc',
    'dtlssrtptransport.h',
    'externalhmac.cc',
    'externalhmac.h',
    'jseptransport2.cc',
    'jseptransport2.h',
    'jseptransportcontroller.cc',
    'jseptransportcontroller.h',
    'mediasession.cc',
    'mediasession.h',
    'rtcpmuxfilter.cc',
    'rtcpmuxfilter.h',
    'rtpmediautils.cc',
    'rtpmediautils.h',
    'rtptransport.cc',
    'rtptransport.h',
    'rtptransportinternal.h',
    'rtptransportinternaladapter.h',
    'sessiondescription.cc',
    'sessiondescription.h',
    'srtpfilter.cc',
    'srtpfilter.h',
    'srtpsession.cc',
    'srtpsession.h',
    'srtptransport.cc',
    'srtptransport.h',
    'transportstats.cc',
    'transportstats.h',

    # create_pc_factory
    'createpeerconnectionfactory.cc',
)

# Because WebRTC accesses libsrtp's internals in this ugly way, we have to redefine their config.h results:
# TODO: pull this 
libsrtp_defs = [
    # Config
    '-DHAVE_CONFIG_H',

    # Platform properties
    '-DHAVE_STDLIB_H',
    '-DHAVE_STRING_H',
    '-DHAVE_STDINT_H',
    '-DHAVE_INTTYPES_H',
    '-DHAVE_INT16_T',
    '-DHAVE_INT32_T',
    '-DHAVE_INT8_T',
    '-DHAVE_UINT16_T',
    '-DHAVE_UINT32_T',
    '-DHAVE_UINT64_T',
    '-DHAVE_UINT8_T',

    # POSIX specifics
    '-DHAVE_ARPA_INET_H',
    '-DHAVE_NETINET_IN_H',
    '-DHAVE_SYS_TYPES_H',
    '-DHAVE_UNISTD_H',

]

libpc = static_library(
  'pc',
  libpc_files,
  include_directories : [inc_common],
  dependencies: dep_srtp,
  cpp_args: internal_args + libsrtp_defs,
)

all_libraries += libpc
